# vanity

./: .gitignore  Cargo.toml  README.md
crates/vanity-cli/: Cargo.toml
crates/vanity-cli/src/: args.rs  main.rs  output.rs
crates/vanity-core/: Cargo.toml
crates/vanity-core/src/: address.rs  crypto.rs  lib.rs  pattern.rs
crates/vanity-cuda/: Cargo.toml  build.rs
crates/vanity-cuda/kernels/: common.cuh  ecdsa.cu  keccak.cu  vanity.cu
crates/vanity-cuda/src/: context.rs  lib.rs
crates/vanity-metal/: Cargo.toml
crates/vanity-metal/shaders/: vanity.metal
crates/vanity-metal/src/: lib.rs
crates/vanity-opencl/: Cargo.toml
crates/vanity-opencl/kernels/: vanity.cl
crates/vanity-opencl/src/: lib.rs
