[package]
name = "vanity-core"
version.workspace = true
edition.workspace = true

[dependencies]
sha3.workspace = true
secp256k1.workspace = true
k256.workspace = true
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true

[dev-dependencies]
criterion = "0.5"
