[package]
name = "vanity-metal"
version.workspace = true
edition.workspace = true

[dependencies]
vanity-core = { path = "../vanity-core" }
anyhow.workspace = true
thiserror.workspace = true
hex.workspace = true
rand.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.31", optional = true }
objc = { version = "0.2", optional = true }
block = { version = "0.1", optional = true }

[features]
default = []
metal-runtime = ["dep:metal", "dep:objc", "dep:block"]
